tests/fsharp/typecheck/overloads/neg_known_return_type_and_known_type_arguments.bsl

neg_known_return_type_and_known_type_arguments.fsx(16,57,16,67): typecheck error FS0043: The constraints 'struct' and 'null' are inconsistent

neg_known_return_type_and_known_type_arguments.fsx(52,54,52,64): typecheck error FS0043: The constraints 'struct' and 'null' are inconsistent

neg_known_return_type_and_known_type_arguments.fsx(54,54,54,64): typecheck error FS0043: The constraints 'struct' and 'null' are inconsistent

neg_known_return_type_and_known_type_arguments.fsx(77,30,77,98): typecheck error FS0043: This expression was expected to have type
    ''Monoid'    
but here has type
    ''a -> 'a'    

neg_known_return_type_and_known_type_arguments.fsx(90,24,90,28): typecheck error FS0039: The value or constructor 'zero' is not defined. Maybe you want one of the following:
   Zero
